fix: layout issue

--- a/src/styles/pages/server.module.css
+++ b/src/styles/pages/server.module.css
@@ -550,6 +550,7 @@
   display: flex;
   overflow-y: scroll;
   padding: 0.75rem;
+  height: 100%;
 }
 
 .broadcast-area {
